discussion/kv_engine/129645/129645_rev32_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-39620: Add support for ifconfig commands [2.0/3]

This patch contains the implementation for the ifconfig
commands (and a unit test suite which tests them).

It is currently not possible to fully use the new commands
as it is in "conflict" with the normal config reload (it'll
give you undefined behavior as it might drop and open ports
etc).

Change-Id: I56eea6cbcb2e0d4b073f4247c29d7308dc40d67b

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Trond Norbye
Date: 2021-03-05 11:39:00.000000000
Message: 
Uploaded patch set 32: Patch Set 31 was rebased.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-03-05 13:18:17.000000000
Message: 
Patch Set 32: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/7457/ : FAILURE

clang-tidy found the following problems:

<pre>
/usr/bin/../lib/gcc/x86_64-linux-gnu/7.5.0/../../../../include/c++/7.5.0/bits/unique_ptr.h:821:34: error: allocating an object of abstract class type "ServerSocket" [clang-diagnostic-error]
    { return unique_ptr<_Tp>(new _Tp(std::forward<_Args>(__args)...)); }
                                 ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/daemon/network_interface_manager.cc:497:39: note: in instantiation of function template specialization "std::make_unique<ServerSocket, int &, event_base *, std::shared_ptr<ListeningPort> &>" requested here
        listen_conn.emplace_back(std::make_unique<ServerSocket>(
                                      ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/daemon/server_socket.h:45:34: note: unimplemented pure virtual method "getInterfaceDescription" in "ServerSocket"
    virtual const ListeningPort& getInterfaceDescription() const = 0;
                                 ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/daemon/server_socket.h:48:18: note: unimplemented pure virtual method "updateSSL" in "ServerSocket"
    virtual void updateSSL(const std::string& key, const std::string& cert) = 0;
                 ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/daemon/server_socket.h:54:28: note: unimplemented pure virtual method "toJson" in "ServerSocket"
    virtual nlohmann::json toJson() const = 0;
                           ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/daemon/server_socket.h:56:32: note: unimplemented pure virtual method "getUuid" in "ServerSocket"
    virtual const std::string& getUuid() const = 0;
                               ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/7457/ )

Compile error at /usr/bin/../lib/gcc/x86_64-linux-gnu/7.5.0/../../../../include/c++/7.5.0/bits/unique_ptr.h:821:34:
error: allocating an object of abstract class type "ServerSocket" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/7457/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/34050/ : FAILURE

Compile error at C:\Program Files (x86)\Microsoft Visual Studio\2017\Professional\VC\Tools\MSVC\14.16.27023\include\memory(2538): error C2259: "ServerSocket": cannot instantiate abstract class ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/34050/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/29249/ : FAILURE

Compile error at /usr/local/lib/gcc/x86_64-pc-linux-gnu/7.3.0/../../../../include/c++/7.3.0/bits/unique_ptr.h:825:34:
error: allocating an object of abstract class type "ServerSocket"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/29249/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/9069/ : FAILURE

Compile error at [2021-03-05T12:26:51.502Z] /usr/local/include/c++/7.3.0/bits/unique_ptr.h:825:30:
error: invalid new-expression of abstract class type ?ServerSocket?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/9069/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/8128/ : FAILURE

Compile error at [2021-03-05T11:50:29.539Z] /Library/Developer/CommandLineTools_11.3.1/usr/bin/../include/c++/v1/memory:3132:32:
error: allocating an object of abstract class type "ServerSocket"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/8128/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/9425/ : FAILURE

Compile error at [2021-03-05T12:46:24.743Z] /usr/bin/../lib/gcc/x86_64-linux-gnu/7.5.0/../../../../include/c++/7.5.0/bits/unique_ptr.h:821:34:
error: allocating an object of abstract class type "ServerSocket"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/9425/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/9210/ : FAILURE

Compile error at [2021-03-05T12:48:21.068Z] /usr/local/include/c++/7.3.0/bits/unique_ptr.h:825:30:
error: invalid new-expression of abstract class type ?ServerSocket?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/9210/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/16971/ : FAILURE

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/5995/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
